--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         div {
             background-color: #222222;
             text-align: center;
+            padding: 50px 40px;
         }
         div h1 {
             color: #ffffff;
