--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             color: #ffffff;
             font-size: 20px;
             font-weight: 600;
+            margin-top: 15px;
         }
         div p {
             color: #ffffff;
-            text-align: justify;
         }
     </style>
 </head>
